Add Hacks, Leaks, and Revelations to reading list
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/data/books.yml
+++ b/src/data/books.yml
@@ -46,6 +46,17 @@
     #   recommended: false
     #   progress: 24
 
+    - title: Hacks, Leaks, and Revelations
+      subtitle: The Art of Analyzing Hacked and Leaked Data
+      author: Micah Lee
+      cover: https://cdn.utf9k.net/books/hacks-leaks-and-revelations.jpg
+      cover_height: 1832
+      cover_width: 1400
+      link: https://nostarch.com/hacks-leaks-and-revelations
+      date_finished: null
+      recommended: false
+      progress: 72
+
     - title: Wrong Way
       subtitle: How Privatisation & Economic Reform Backfired
       author: Damien Cahill and Phillip Toner
