--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "sync": "./ci/externalsync.sh"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.9",
-    "@astrojs/mdx": "^2.2.1",
-    "@astrojs/sitemap": "^3.1.1",
-    "astro": "^4.5.8",
+    "@astrojs/check": "0.5.10",
+    "@astrojs/mdx": "2.3.1",
+    "@astrojs/sitemap": "3.1.4",
+    "astro": "4.7.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
