--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "sync": "./ci/externalsync.sh"
   },
   "dependencies": {
-    "@astrojs/check": "0.5.10",
-    "@astrojs/mdx": "2.3.1",
-    "@astrojs/sitemap": "3.1.4",
-    "astro": "4.7.0",
+    "@astrojs/check": "^0.7.0",
+    "@astrojs/mdx": "^3.0.1",
+    "@astrojs/sitemap": "^3.1.5",
+    "astro": "^4.9.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
