Improve formatting when playing or reading multiple things at once
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/data/books.yml
+++ b/src/data/books.yml
@@ -68,16 +68,16 @@
     #   recommended: false
     #   progress: 1
 
-    # - title: Wrong Way
-    #   subtitle: How Privatisation & Economic Reform Backfired
-    #   author: Damien Cahill and Phillip Toner
-    #   cover: https://cdn.utf9k.net/books/wrong-way.jpg
-    #   cover_height: 1124
-    #   cover_width: 735
-    #   link: https://openlibrary.org/works/OL29300070W/Wrong_Way
-    #   date_finished: null
-    #   recommended: false
-    #   progress: 41
+    - title: Wrong Way
+      subtitle: How Privatisation & Economic Reform Backfired
+      author: Damien Cahill and Phillip Toner
+      cover: https://cdn.utf9k.net/books/wrong-way.jpg
+      cover_height: 1124
+      cover_width: 735
+      link: https://openlibrary.org/works/OL29300070W/Wrong_Way
+      date_finished: null
+      recommended: false
+      progress: 41
 
     # - title: Unscripted
     #   subtitle: The Epic Battle for a Media Empire and the Redstone Family Legacy
