--- a/src/data/books.yml
+++ b/src/data/books.yml
@@ -24,16 +24,16 @@
     #   recommended: false
     #   progress: 10
 
-    # - title: 100 Go Mistakes and How to Avoid Them
-    #   subtitle: null
-    #   author: Teiva Harsanyi
-    #   cover: https://cdn.utf9k.net/books/100-go-mistakes-and-how-to-avoid-them.jpg
-    #   cover_height: 2775
-    #   cover_width: 2213
-    #   link: https://openlibrary.org/books/OL28154826M/SQL_Performance_Explained_Everything_Developers_Need_to_Know_about_SQL_Performance
-    #   date_finished: null
-    #   recommended: false
-    #   progress: 13
+    - title: 100 Go Mistakes and How to Avoid Them
+      subtitle: null
+      author: Teiva Harsanyi
+      cover: https://cdn.utf9k.net/books/100-go-mistakes-and-how-to-avoid-them.jpg
+      cover_height: 2775
+      cover_width: 2213
+      link: https://openlibrary.org/books/OL28154826M/SQL_Performance_Explained_Everything_Developers_Need_to_Know_about_SQL_Performance
+      date_finished: null
+      recommended: false
+      progress: 22
 
     # - title: SQL Performance Explained
     #   subtitle: Everything Developers Need To Know About SQL Performance
