Finished Means of Control

--- a/src/data/books.yml
+++ b/src/data/books.yml
@@ -97,9 +97,9 @@
       cover_height: 2776
       cover_width: 1838
       link: https://www.penguinrandomhouse.com/books/706321/means-of-control-by-byron-tau/
-      date_finished: null
+      date_finished: 2024-06-07
       recommended: true
-      progress: 30
+      progress: 100
 
     - title: How Big Things Get Done
       subtitle: The Surprising Factors That Determine the Fate of Every Project, from Home Renovations to Space Exploration and Everything In Between
