--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "sync": "./ci/externalsync.sh"
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
-    "@astrojs/mdx": "^3.0.1",
-    "@astrojs/sitemap": "^3.1.5",
-    "astro": "^4.9.1",
+    "@astrojs/check": "0.8.3",
+    "@astrojs/mdx": "3.1.3",
+    "@astrojs/sitemap": "3.1.6",
+    "astro": "4.12.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
