--- a/src/data/books.yml
+++ b/src/data/books.yml
@@ -2,17 +2,6 @@
 - list: 2024
   goal: 16
   books:
-    - title: Meditations for Mortals
-      subtitle: Four Weeks to Embrace Your Limitations and Make Time for What Counts
-      author: Oliver Burkeman
-      cover: https://cdn.utf9k.net/books/meditations-for-mortals.jpg
-      cover_height: 2620
-      cover_width: 1630
-      link: https://www.penguin.co.nz/books/meditations-for-mortals-9781847927620
-      date_finished: 2024-10-06
-      recommended: true
-      progress: 100
-
     # - title: Seeing Like a State
     #   subtitle: How Certain Schemes to Improve the Human Condition Have Failed
     #   author: James C. Scott
@@ -100,6 +89,39 @@
     #   date_finished: null
     #   recommended: false
     #   progress: 32
+
+    - title: Personal Kanban
+      subtitle: Mapping Work | Navigating Life
+      author: Jim Benson and Tonianne DeMaria Barry
+      cover: https://cdn.utf9k.net/books/personal-kanban.jpg
+      cover_height: 1360
+      cover_width: 907
+      link: https://www.personalkanban.com/
+      date_finished: null
+      recommended: false
+      progress: 17
+
+    - title: The Wisdom of Anxiety
+      subtitle: How Worry and Intrusive Thoughts Are Gifts to Help You Heal
+      author: Sheryl Paul
+      cover: https://cdn.utf9k.net/books/the-wisdom-of-anxiety.jpg
+      cover_height: 1500
+      cover_width: 1000
+      link: https://conscious-transitions.com/the-wisdom-of-anxiety/
+      date_finished: null
+      recommended: false
+      progress: 17
+
+    - title: Meditations for Mortals
+      subtitle: Four Weeks to Embrace Your Limitations and Make Time for What Counts
+      author: Oliver Burkeman
+      cover: https://cdn.utf9k.net/books/meditations-for-mortals.jpg
+      cover_height: 2620
+      cover_width: 1630
+      link: https://www.penguin.co.nz/books/meditations-for-mortals-9781847927620
+      date_finished: 2024-10-06
+      recommended: true
+      progress: 100
 
     - title: Means of Control
       subtitle: How the Hidden Alliance of Tech and Government Is Creating a New American Surveillance State
