--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "dependencies": {
     "@astrojs/check": "0.9.4",
     "@astrojs/mdx": "3.1.9",
+    "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@r4ai/remark-callout": "^0.6.2",
     "astro": "4.16.11",
+    "markdown-it": "^14.1.0",
+    "sanitize-html": "^2.13.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
