Use working directory clauses
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -20,18 +20,18 @@ jobs:
         uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: "0.139.0"
-      - name: Change to Hugo directory
-        run: cd hugo
       - name: Install dependencies
         run: bun install
+        working-directory: hugo
       - name: Build site
         run: bun run deploy
+        working-directory: hugo
       - name: Publish to Bunny Edge CDN
         uses: ayeressian/bunnycdn-storage-deploy@v2.2.0
         with:
-          source: "dist"
+          source: "hugo/dist"
           storageZoneName: "utf9k-next"
-          storagePassword: "${{ secrets.BUNNY_API_TOKEN }}"
+          storagePassword: "${{ secrets.BUNNY_API_TOKEN_NEXT }}"
           accessKey: "${{ secrets.BUNNY_ACCESS_KEY }}"
           pullZoneId: "${{ secrets.BUNNY_PULL_ZONE_ID_NEXT }}"
           upload: "true"
