--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -2,6 +2,7 @@ name: Build and push
 on:
   push:
     paths:
+      - '.github/workflows/deploy-next.yml'
       - 'hugo/**'
   workflow_dispatch:
 jobs:
