Don't push main site if hugo changes
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,9 @@
 name: Build and push
 on:
   push:
+    paths-ignore:
+      - '.github/workflows/deploy-next.yml'
+      - 'hugo/**'
   workflow_dispatch:
   workflow_run:
     workflows: [Audit Links, External Sync]
