--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -32,8 +32,8 @@ jobs:
         with:
           source: "hugo/dist"
           storageZoneName: "utf9k-next"
-          storagePassword: "${{ secrets.BUNNY_API_TOKEN_NEXT }}"
-          accessKey: "${{ secrets.BUNNY_ACCESS_KEY }}"
+          storagePassword: "${{ secrets.BUNNY_API_TOKEN }}"
+          accessKey: "${{ secrets.BUNNY_API_TOKEN_NEXT }}"
           pullZoneId: "${{ secrets.BUNNY_PULL_ZONE_ID_NEXT }}"
           upload: "true"
           purgePullZone: "true"
