--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -33,7 +33,7 @@ jobs:
           source: "hugo/dist"
           storageZoneName: "utf9k-next"
           storagePassword: "${{ secrets.BUNNY_API_TOKEN }}"
-          accessKey: "${{ secrets.BUNNY_API_TOKEN_NEXT }}"
+          accessKey: "${{ secrets.BUNNY_ACCESS_KEY }}"
           pullZoneId: "${{ secrets.BUNNY_PULL_ZONE_ID_NEXT }}"
           upload: "true"
           purgePullZone: "true"
