--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           source: "hugo/dist"
           storageZoneName: "utf9k-next"
-          storagePassword: "${{ secrets.BUNNY_API_TOKEN }}"
+          storagePassword: "${{ secrets.BUNNY_STORAGE_PASSWORD_NEXT }}"
           accessKey: "${{ secrets.BUNNY_ACCESS_KEY }}"
           pullZoneId: "${{ secrets.BUNNY_PULL_ZONE_ID_NEXT }}"
           upload: "true"
