Fix storage endpoint
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -33,6 +33,7 @@ jobs:
           source: "hugo/dist"
           storageZoneName: "utf9k-next"
           storagePassword: "${{ secrets.BUNNY_STORAGE_PASSWORD_NEXT }}"
+          storageEndpoint: "syd.storage.bunnycdn.com"
           accessKey: "${{ secrets.BUNNY_ACCESS_KEY }}"
           pullZoneId: "${{ secrets.BUNNY_PULL_ZONE_ID_NEXT }}"
           upload: "true"
