Use clearer name for access key
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/.github/workflows/deploy-next.yml
+++ b/.github/workflows/deploy-next.yml
@@ -34,7 +34,7 @@ jobs:
           storageZoneName: "utf9k-next"
           storagePassword: "${{ secrets.BUNNY_STORAGE_PASSWORD_NEXT }}"
           storageEndpoint: "syd.storage.bunnycdn.com"
-          accessKey: "${{ secrets.BUNNY_ACCESS_KEY }}"
+          accessKey: "${{ secrets.BUNNY_GLOBAL_API_KEY }}"
           pullZoneId: "${{ secrets.BUNNY_PULL_ZONE_ID_NEXT }}"
           upload: "true"
           purgePullZone: "true"
