--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   },
   "dependencies": {
     "@astrojs/check": "0.9.4",
-    "@astrojs/rss": "^4.0.9",
+    "@astrojs/rss": "4.0.10",
     "@astrojs/sitemap": "^3.2.1",
     "@r4ai/remark-callout": "^0.6.2",
-    "astro": "4.16.11",
+    "astro": "5.0.3",
     "markdown-it": "^14.1.0",
     "sanitize-html": "^2.13.1",
     "typescript": "^5.3.3"
