Finished The Upward Spiral
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/data/books.yml
+++ b/src/data/books.yml
@@ -90,17 +90,6 @@
     #   recommended: false
     #   progress: 32
 
-    - title: The Upward Spiral
-      subtitle: Using Neuroscience to Reverse the Course of Depression, One Small Change at a Time
-      author: Alex Korb
-      cover: https://cdn.utf9k.net/books/the-upward-spiral.jpg
-      cover_height: 1801
-      cover_width: 1200
-      link: https://www.alexkorbphd.com/the-upward-spiral-method/
-      date_finished: null
-      recommended: false
-      progress: 49
-
     - title: The Wisdom of Anxiety
       subtitle: How Worry and Intrusive Thoughts Are Gifts to Help You Heal
       author: Sheryl Paul
@@ -110,7 +99,18 @@
       link: https://conscious-transitions.com/the-wisdom-of-anxiety/
       date_finished: null
       recommended: false
-      progress: 17
+      progress: 44
+
+    - title: The Upward Spiral
+      subtitle: Using Neuroscience to Reverse the Course of Depression, One Small Change at a Time
+      author: Alex Korb
+      cover: https://cdn.utf9k.net/books/the-upward-spiral.jpg
+      cover_height: 1801
+      cover_width: 1200
+      link: https://www.alexkorbphd.com/the-upward-spiral-method/
+      date_finished: 2024-12-13
+      recommended: true
+      progress: 100
 
     - title: Personal Kanban
       subtitle: Mapping Work | Navigating Life
